#OERDEV-48 fixes + workflow alignment

--- a/tool/assets/tool2/css/sidetabs.css
+++ b/tool/assets/tool2/css/sidetabs.css
@@ -14,11 +14,10 @@ div.tabs {
 }
 
 div.tabs input, div.tabs a {
-  background:#eee;
   color:#444;
   width:119px;
   display:block;
-  background:url(../images/side-tab-bg-off.gif) no-repeat;
+  background: transparent url(../images/side-tab-bg-off.gif) no-repeat;
   border:none;
   cursor:pointer;
   padding:0px 0px 0px 10px;
@@ -33,13 +32,16 @@ div.tabs input, div.tabs a {
 
 div.tabs a.activesubmit, div.tabs input.activesubmit,
 div.tabs a.activesubmit:hover, div.tabs input.activesubmit:hover {
-  background:#fff;
-  font-weight:bold;
   width:120px;
-  border-right:#fff 1px solid;
-  border:none;
+  font-weight:bold;
+	font-size: 13px;
   color:#0033CC;
-  background:url(../images/side-tab-bg.gif) no-repeat;
+  border:none;
+  border-right:#fff 1px solid;
+	background-image: none;
+  background-color: #fff;
+  /*background: #fff url(../images/side-tab-bg.gif) no-repeat;
+*/
   padding:0px 0px 0px 6px;
   cursor:default;
 }
@@ -55,14 +57,13 @@ div.tabformcontent {
   padding:6px 10px;
   margin: 0px 0px 0px -1px;
   border: 1px solid #eee;
-  border-right: 0px;
+  border-left: 0px;
   position:relative;
   background:#fff url(../images/tabcontent-bg.png) no-repeat right bottom;
   min-height:200px;
   z-index:0;
   width:560px;
 }
-
 
 div.tabformcontent h1 {
   font-family:lucida sans unicode,trebuchet ms,Verdana,Arial,Helvetica,sans-serif;
